--- a/package.json
+++ b/package.json
@@ -23,15 +23,18 @@
     "url": "git://github.com/tonylukasavage/taipan.git"
   },
   "devDependencies": {
-	"grunt": "~0.4.5",
-	"grunt-mocha-test": "~0.10.2",
-	"grunt-contrib-jshint": "~0.10.0",
-	"grunt-contrib-clean": "~0.5.0",
-	"istanbul": "~0.2.10",
-	"mocha": "~1.19.0",
-	"should": "~3.3.1"
-},
+    "grunt": "~0.4.5",
+    "grunt-mocha-test": "~0.10.2",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-clean": "~0.5.0",
+    "istanbul": "~0.2.10",
+    "mocha": "~1.19.0",
+    "should": "~3.3.1"
+  },
   "engines": {
     "node": ">=0.10"
+  },
+  "dependencies": {
+    "commander": "^2.2.0"
   }
 }
